# solidtime-everhour-sync

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.json.example  docker-compose.yml  pyproject.toml
src/solidtime_everhour/: __main__.py  config.py  main.py
src/solidtime_everhour/api/: everhour.py  solidtime.py
src/solidtime_everhour/sync/: structure.py  time_entries.py
