[project]
name = "solidtime-everhour-sync"
version = "0.1.0"
description = "Sync time tracking between self-hosted Solidtime and Everhour (Linear integration)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "apscheduler>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solidtime_everhour"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
